--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Color2Android",
   "id": "1287346413780241146",
   "api": "1.0.0",
-  "main": "code.js",
+  "main": "code.ts",
   "capabilities": [],
   "enableProposedApi": false,
   "editorType": [
