--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@figma/plugin-typings": "^1.78.0",
     "typescript": "*"
+  },
+  "dependencies": {
+    "pnpm": "^9.0.6"
   }
 }
