--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Color2Android",
   "id": "1287346413780241146",
   "api": "1.0.0",
-  "main": "code.ts",
+  "main": "apps/plugin/dist/code.js",
+  "ui": "apps/plugin/dist/index.html",
   "capabilities": [],
   "enableProposedApi": false,
   "editorType": [
