resolve dependencies and add debug module

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "tsconfig",
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Package",
   "extends": "./base.json",
