--- a/app/plugin/package.json
+++ b/app/plugin/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@figma/plugin-typings": "^1.84.0",
-    "react": "^18.2.0",
+    "concurrently": "^8.2.2",
+    "esbuild": "^0.21.1",
     "plugin-ui": "workspace:*",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -21,8 +23,8 @@
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
