--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "",
   "devDependencies": {
     "@figma/plugin-typings": "^1.78.0",
-    "typescript": "*"
+    "typescript": "*",
+    "prettier": "^3.2.4"
   },
   "dependencies": {
     "pnpm": "^9.0.6",
