--- a/packages/plugin-ui/package.json
+++ b/packages/plugin-ui/package.json
@@ -2,8 +2,8 @@
   "name": "plugin-ui",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.tsx",
-  "types": "./src/index.tsx",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "scripts": {
     "lint": "eslint \"src/**/*.ts*\"",
     "test": "jest"
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.2.18",
-    "@types/react-syntax-highlighter": "15.5.11"
+    "@types/react-syntax-highlighter": "15.5.11",
+    "tsconfig": "workspace:*"
   }
 }
