--- a/app/debug/package.json
+++ b/app/debug/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
+    "plugin-ui": "workspace:*",
     "next": "14.2.3"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "tsconfig": "workspace:*"
   }
 }
