--- a/packages/gen-code/package.json
+++ b/packages/gen-code/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "@figma/plugin-typings": "^1.78.0"
   }
 }
