--- a/packages/gen-code/tsconfig.json
+++ b/packages/gen-code/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "tsconfig/base.json"
+  "extends": "tsconfig/base.json",
+  "compilerOptions": {
+    "typeRoots": ["./node_modules/@types", "./node_modules/@figma"]
+  }
 }
