--- a/app/debug/package.json
+++ b/app/debug/package.json
@@ -20,7 +20,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "tsconfig": "workspace:*"
+    "eslint-config-next": "14.2.3"
   }
 }
