--- a/app/plugin/package.json
+++ b/app/plugin/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vite-plugin-singlefile": "^1.0.0"
+    "vite-plugin-singlefile": "^1.0.0",
+    "tsconfig": "workspace:*"
   }
 }
