--- a/packages/plugin-ui/package.json
+++ b/packages/plugin-ui/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "antd": "^5.17.0",
     "react": "^18.3.1",
-    "react-syntax-highlighter": "15.5.0"
+    "react-syntax-highlighter": "15.5.0",
+    "model": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
