--- a/packages/plugin-ui/package.json
+++ b/packages/plugin-ui/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.17.0",
     "react": "^18.3.1",
     "react-syntax-highlighter": "15.5.0",
+    "copy-to-clipboard": "^3.3.3",
     "model": "workspace:*"
   },
   "devDependencies": {
