--- a/app/plugin/package.json
+++ b/app/plugin/package.json
@@ -14,6 +14,8 @@
     "concurrently": "^8.2.2",
     "esbuild": "^0.21.1",
     "plugin-ui": "workspace:*",
+    "view-model": "workspace:*",
+    "model": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
