--- a/packages/gen-code/package.json
+++ b/packages/gen-code/package.json
@@ -9,8 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "tsconfig": "workspace:*",
+    "model": "workspace:*",
     "@figma/plugin-typings": "^1.78.0"
   }
 }
