rename Color2Android -> TextColor2Android

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Color2Android",
+  "name": "TextColor2Android",
   "id": "1287346413780241146",
   "api": "1.0.0",
   "main": "app/plugin/dist/code.js",
