--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Color2Android",
+  "name": "TextColor2Android",
   "version": "1.0.0",
   "description": "Your Figma Plugin",
   "scripts": {
